--- a/chat-client/src/main/resources/ChatWindow.fxml
+++ b/chat-client/src/main/resources/ChatWindow.fxml
@@ -57,7 +57,7 @@
                     <Insets left="6.0" right="6.0"/>
                 </HBox.margin>
             </TextField>
-            <Button fx:id="btnSend" minWidth="150.0" prefHeight="65.0" onAction="#sendMessage" text="SEND">
+            <Button fx:id="btnSend" minWidth="150.0" prefHeight="65.0" onAction="#sendMessage" text="Переслать">
                 <HBox.margin>
                     <Insets left="6.0" right="6.0"/>
                 </HBox.margin>
